Add unit tests for MultiSourceExternalApiService